--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "html-to-pdfmake": "^2.3.9",
+    "jspdf": "^2.5.1",
+    "pdfmake": "^0.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pdf-html": "^1.1.8",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
